samples/_failures_safe/1761493709_ade5f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d569c42.c: In function ‘main’:
./samples/SAFE/__tmp_8d569c42.c:149:5: error: expected expression at end of input
  149 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_8d569c42.c:149:5: error: expected declaration or statement at end of input
